# cpp_practice

./: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
docker/: CustomDockerfile
src/palindrome-int/: CMakeLists.txt  main.cpp
